base/platform-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-gateway
  labels:
    app.kubernetes.io/part-of: platform
